build-files/pling/2.0.0/README.md
# Pling container

Main tool: [pling](https://pling.readthedocs.io/latest/)
  
Code repository: https://github.com/iqbal-lab-org/pling

<details>
<summary>Additional tools installed via micromamba:</summary>

```
  Name                       Version      Build                 Channel    
─────────────────────────────────────────────────────────────────────────────
  _libgcc_mutex              0.1          conda_forge           conda-forge
  _openmp_mutex              4.5          2_gnu                 conda-forge
  aioeasywebdav              2.4.0        py39hf3d152e_1001     conda-forge
  aiohappyeyeballs           2.6.1        pyhd8ed1ab_0          conda-forge
  aiohttp                    3.11.16      py39h9399b63_0        conda-forge
  aiosignal                  1.3.2        pyhd8ed1ab_0          conda-forge
  amply                      0.1.6        pyhd8ed1ab_1          conda-forge
  annotated-types            0.7.0        pyhd8ed1ab_1          conda-forge
  appdirs                    1.4.4        pyhd8ed1ab_1          conda-forge
  async-timeout              5.0.1        pyhd8ed1ab_1          conda-forge
  attrs                      25.3.0       pyh71513ae_0          conda-forge
  bcrypt                     4.3.0        py39he612d8f_0        conda-forge
  bitstring                  3.1.9        pyhd8ed1ab_0          conda-forge
  boto3                      1.37.31      pyhd8ed1ab_0          conda-forge
  botocore                   1.37.31      pyge38_1234567_0      conda-forge
  brotli                     1.1.0        hb9d3cd8_2            conda-forge
  brotli-bin                 1.1.0        hb9d3cd8_2            conda-forge
  brotli-python              1.1.0        py39hf88036b_2        conda-forge
  bzip2                      1.0.8        h4bc722e_7            conda-forge
  c-ares                     1.34.5       hb9d3cd8_0            conda-forge
  ca-certificates            2025.1.31    hbcca054_0            conda-forge
  cachetools                 4.2.4        pyhd8ed1ab_0          conda-forge
  certifi                    2025.1.31    pyhd8ed1ab_0          conda-forge
  cffi                       1.17.1       py39h15c3d72_0        conda-forge
  charset-normalizer         3.4.1        pyhd8ed1ab_0          conda-forge
  click                      8.1.8        pyh707e725_0          conda-forge
  coin-or-cbc                2.10.12      h00e76a6_2            conda-forge
  coin-or-cgl                0.60.9       h82e2f02_4            conda-forge
  coin-or-clp                1.17.10      h8a7a1e7_1            conda-forge
  coin-or-osi                0.108.11     h96cc833_4            conda-forge
  coin-or-utils              2.11.12      h3a12e53_2            conda-forge
  coincbc                    2.10.12      2_metapackage         conda-forge
  colorama                   0.4.6        pyhd8ed1ab_1          conda-forge
  coloredlogs                15.0.1       pyhd8ed1ab_4          conda-forge
  configargparse             1.7          pyhd8ed1ab_1          conda-forge
  connection_pool            0.0.3        pyhd3deb0d_0          conda-forge
  contourpy                  1.3.0        py39h74842e3_2        conda-forge
  cryptography               44.0.2       py39h7170ec2_0        conda-forge
  cycler                     0.12.1       pyhd8ed1ab_1          conda-forge
  datrie                     0.8.2        py39h8cd3c5a_8        conda-forge
  defusedxml                 0.7.1        pyhd8ed1ab_0          conda-forge
  deprecation                2.1.0        pyh9f0ad1d_0          conda-forge
  dingii                     0.0.1        pyhdfd78af_0          bioconda   
  docutils                   0.21.2       pyhd8ed1ab_1          conda-forge
  dpath                      2.2.0        pyha770c72_0          conda-forge
  dropbox                    12.0.2       pyhd8ed1ab_1          conda-forge
  eido                       0.2.4        pyhd8ed1ab_0          conda-forge
  exceptiongroup             1.2.2        pyhd8ed1ab_1          conda-forge
  filechunkio                1.8          py_2                  conda-forge
  fonttools                  4.57.0       py39h9399b63_0        conda-forge
  freetype                   2.13.3       h48d6fc4_0            conda-forge
  frozenlist                 1.5.0        py39h9399b63_1        conda-forge
  ftputil                    5.1.0        pyhd8ed1ab_0          conda-forge
  gitdb                      4.0.12       pyhd8ed1ab_0          conda-forge
  gitpython                  3.1.44       pyhff2d567_0          conda-forge
  glpk                       5.0          h445213a_0            conda-forge
  gmp                        6.3.0        hac33072_2            conda-forge
  google-api-core            2.24.2       pyhd8ed1ab_0          conda-forge
  google-api-python-client   2.165.0      pyhff2d567_0          conda-forge
  google-auth                2.38.0       pyhd8ed1ab_0          conda-forge
  google-auth-httplib2       0.2.0        pyhd8ed1ab_1          conda-forge
  google-cloud-core          2.4.3        pyhd8ed1ab_0          conda-forge
  google-cloud-storage       3.1.0        pyhd8ed1ab_0          conda-forge
  google-crc32c              1.7.1        py39h2cad9fb_0        conda-forge
  google-resumable-media     2.7.2        pyhd8ed1ab_2          conda-forge
  googleapis-common-protos   1.69.2       pyhd8ed1ab_0          conda-forge
  grpcio                     1.71.0       py39h169e510_0        conda-forge
  httplib2                   0.22.0       pyhd8ed1ab_1          conda-forge
  humanfriendly              10.0         pyh707e725_8          conda-forge
  idna                       3.10         pyhd8ed1ab_1          conda-forge
  importlib-metadata         8.6.1        pyha770c72_0          conda-forge
  importlib-resources        6.5.2        pyhd8ed1ab_0          conda-forge
  importlib_metadata         8.6.1        hd8ed1ab_0            conda-forge
  importlib_resources        6.5.2        pyhd8ed1ab_0          conda-forge
  iniconfig                  2.0.0        pyhd8ed1ab_1          conda-forge
  intervaltree               3.1.0        pyhd8ed1ab_1          conda-forge
  jinja2                     3.1.6        pyhd8ed1ab_0          conda-forge
  jmespath                   1.0.1        pyhd8ed1ab_1          conda-forge
  jsonschema                 4.23.0       pyhd8ed1ab_1          conda-forge
  jsonschema-specifications  2024.10.1    pyhd8ed1ab_1          conda-forge
  jupyter_core               5.7.2        pyh31011fe_1          conda-forge
  kiwisolver                 1.4.7        py39h74842e3_0        conda-forge
  lcms2                      2.17         h717163a_0            conda-forge
  ld_impl_linux-64           2.43         h712a8e2_4            conda-forge
  lerc                       4.0.0        h27087fc_0            conda-forge
  libabseil                  20250127.1   cxx17_hbbce691_0      conda-forge
  libblas                    3.9.0        31_h59b9bed_openblas  conda-forge
  libbrotlicommon            1.1.0        hb9d3cd8_2            conda-forge
  libbrotlidec               1.1.0        hb9d3cd8_2            conda-forge
  libbrotlienc               1.1.0        hb9d3cd8_2            conda-forge
  libcblas                   3.9.0        31_he106b2a_openblas  conda-forge
  libcrc32c                  1.1.2        h9c3ff4c_0            conda-forge
  libdeflate                 1.23         h4ddbbb0_0            conda-forge
  libffi                     3.4.6        h2dba641_1            conda-forge
  libgcc                     14.2.0       h767d61c_2            conda-forge
  libgcc-ng                  14.2.0       h69a702a_2            conda-forge
  libgfortran                14.2.0       h69a702a_2            conda-forge
  libgfortran-ng             14.2.0       h69a702a_2            conda-forge
  libgfortran5               14.2.0       hf1ad2bd_2            conda-forge
  libgomp                    14.2.0       h767d61c_2            conda-forge
  libgrpc                    1.71.0       he753a82_0            conda-forge
  libjpeg-turbo              3.0.0        hd590300_1            conda-forge
  liblapack                  3.9.0        31_h7ac8fdf_openblas  conda-forge
  liblapacke                 3.9.0        31_he2f377e_openblas  conda-forge
  liblzma                    5.8.1        hb9d3cd8_0            conda-forge
  libnsl                     2.0.1        hd590300_0            conda-forge
  libopenblas                0.3.29       pthreads_h94d23a6_0   conda-forge
  libpng                     1.6.47       h943b412_0            conda-forge
  libprotobuf                5.29.3       h501fc15_0            conda-forge
  libre2-11                  2024.07.02   hba17884_3            conda-forge
  libsodium                  1.0.20       h4ab18f5_0            conda-forge
  libsqlite                  3.49.1       hee588c1_2            conda-forge
  libstdcxx                  14.2.0       h8f9b012_2            conda-forge
  libstdcxx-ng               14.2.0       h4852527_2            conda-forge
  libtiff                    4.7.0        hd9ff511_3            conda-forge
  libuuid                    2.38.1       h0b41bf4_0            conda-forge
  libwebp-base               1.5.0        h851e524_0            conda-forge
  libxcb                     1.17.0       h8a09558_0            conda-forge
  libxcrypt                  4.4.36       hd590300_1            conda-forge
  libzlib                    1.3.1        hb9d3cd8_2            conda-forge
  logmuse                    0.2.8        pyhd8ed1ab_1          conda-forge
  markdown-it-py             3.0.0        pyhd8ed1ab_1          conda-forge
  markupsafe                 3.0.2        py39h9399b63_1        conda-forge
  matplotlib-base            3.9.4        py39h16632d1_0        conda-forge
  mdurl                      0.1.2        pyhd8ed1ab_1          conda-forge
  multidict                  6.3.2        py39h9399b63_0        conda-forge
  mummer                     3.23         pl5321h503566f_21     bioconda   
  munkres                    1.1.4        pyh9f0ad1d_0          conda-forge
  nbformat                   5.10.4       pyhd8ed1ab_1          conda-forge
  ncurses                    6.5          h2d0b736_3            conda-forge
  networkx                   3.2.1        pyhd8ed1ab_0          conda-forge
  numpy                      2.0.2        py39h9cb892a_1        conda-forge
  oauth2client               4.1.3        pyhd8ed1ab_1          conda-forge
  openjpeg                   2.5.3        h5fbd93e_0            conda-forge
  openssl                    3.5.0        h7b32b05_0            conda-forge
  packaging                  24.2         pyhd8ed1ab_2          conda-forge
  pandas                     2.2.3        py39h3b40f6f_2        conda-forge
  paramiko                   3.5.1        pyhd8ed1ab_0          conda-forge
  pephubclient               0.4.4        pyhd8ed1ab_1          conda-forge
  peppy                      0.40.7       pyhd8ed1ab_2          conda-forge
  perl                       5.32.1       7_hd590300_perl5      conda-forge
  pillow                     11.1.0       py39h15c0740_0        conda-forge
  pip                        25.0.1       pyh8b19718_0          conda-forge
  pkgutil-resolve-name       1.3.10       pyhd8ed1ab_2          conda-forge
  plac                       1.4.5        pyhd8ed1ab_0          conda-forge
  plasnet                    0.6.0        pyhdfd78af_1          bioconda   
  platformdirs               4.3.7        pyh29332c3_0          conda-forge
  pling                      2.0.0        pyhdfd78af_0          bioconda   
  pluggy                     1.5.0        pyhd8ed1ab_1          conda-forge
  ply                        3.11         pyhd8ed1ab_3          conda-forge
  prettytable                3.16.0       pyhd8ed1ab_0          conda-forge
  propcache                  0.2.1        py39h9399b63_1        conda-forge
  proto-plus                 1.26.1       pyhd8ed1ab_0          conda-forge
  protobuf                   5.29.3       py39hbeaf701_0        conda-forge
  psutil                     7.0.0        py39h8cd3c5a_0        conda-forge
  pthread-stubs              0.4          hb9d3cd8_1002         conda-forge
  pulp                       2.7.0        py39hf3d152e_1        conda-forge
  pyasn1                     0.6.1        pyhd8ed1ab_2          conda-forge
  pyasn1-modules             0.4.2        pyhd8ed1ab_0          conda-forge
  pycparser                  2.22         pyh29332c3_1          conda-forge
  pydantic                   2.11.3       pyh3cfb1c2_0          conda-forge
  pydantic-core              2.33.1       py39h3506688_0        conda-forge
  pygments                   2.19.1       pyhd8ed1ab_0          conda-forge
  pynacl                     1.5.0        py39h8cd3c5a_4        conda-forge
  pyopenssl                  25.0.0       pyhd8ed1ab_0          conda-forge
  pyparsing                  3.2.3        pyhd8ed1ab_1          conda-forge
  pysftp                     0.2.9        py_1                  conda-forge
  pysocks                    1.7.1        pyha55dd90_7          conda-forge
  pytest                     8.3.5        pyhd8ed1ab_0          conda-forge
  python                     3.9.21       h85ef794_2_cpython    conda-forge
  python-dateutil            2.9.0.post0  pyhff2d567_1          conda-forge
  python-fastjsonschema      2.21.1       pyhd8ed1ab_0          conda-forge
  python-irodsclient         2.1.0        pyhd8ed1ab_0          conda-forge
  python-tzdata              2025.2       pyhd8ed1ab_0          conda-forge
  python_abi                 3.9          6_cp39                conda-forge
  pytz                       2024.1       pyhd8ed1ab_0          conda-forge
  pyu2f                      0.1.5        pyhd8ed1ab_1          conda-forge
  pyyaml                     6.0.2        py39h9399b63_2        conda-forge
  qhull                      2020.2       h434a139_5            conda-forge
  re2                        2024.07.02   h9925aae_3            conda-forge
  readline                   8.2          h8c095d6_2            conda-forge
  referencing                0.36.2       pyh29332c3_0          conda-forge
  requests                   2.32.3       pyhd8ed1ab_1          conda-forge
  reretry                    0.11.8       pyhd8ed1ab_1          conda-forge
  rich                       14.0.0       pyh29332c3_0          conda-forge
  rpds-py                    0.24.0       py39h3506688_0        conda-forge
  rsa                        4.9          pyhd8ed1ab_1          conda-forge
  s3transfer                 0.11.4       pyhd8ed1ab_0          conda-forge
  scipy                      1.13.1       py39haf93ffa_0        conda-forge
  screed                     1.1.3        pyhd8ed1ab_0          conda-forge
  setuptools                 78.1.0       pyhff2d567_0          conda-forge
  shellingham                1.5.4        pyhd8ed1ab_1          conda-forge
  six                        1.17.0       pyhd8ed1ab_0          conda-forge
  slacker                    0.14.0       pyhd8ed1ab_1          conda-forge
  smart_open                 7.1.0        pyhd8ed1ab_0          conda-forge
  smmap                      5.0.2        pyhd8ed1ab_0          conda-forge
  snakemake                  7.32.4       hdfd78af_1            bioconda   
  snakemake-minimal          7.32.4       pyhdfd78af_1          bioconda   
  sortedcontainers           2.4.0        pyhd8ed1ab_1          conda-forge
  sourmash                   4.8.4        hdfd78af_0            bioconda   
  sourmash-minimal           4.8.4        py39h9fdd4d6_1        conda-forge
  stone                      3.3.2        pyhd8ed1ab_0          conda-forge
  stopit                     1.1.2        pyhd8ed1ab_1          conda-forge
  tabulate                   0.9.0        pyhd8ed1ab_2          conda-forge
  throttler                  1.2.2        pyhd8ed1ab_0          conda-forge
  tk                         8.6.13       noxft_h4845f30_101    conda-forge
  tomli                      2.2.1        pyhd8ed1ab_1          conda-forge
  toposort                   1.10         pyhd8ed1ab_1          conda-forge
  traitlets                  5.14.3       pyhd8ed1ab_1          conda-forge
  typer                      0.15.2       pyhff008b6_0          conda-forge
  typer-slim                 0.15.2       pyh29332c3_0          conda-forge
  typer-slim-standard        0.15.2       h801b22e_0            conda-forge
  typing-extensions          4.13.1       hf5ce1d7_0            conda-forge
  typing-inspection          0.4.0        pyhd8ed1ab_0          conda-forge
  typing_extensions          4.13.1       pyh29332c3_0          conda-forge
  tzdata                     2025b        h78e105d_0            conda-forge
  ubiquerg                   0.8.0        pyhd8ed1ab_0          conda-forge
  unicodedata2               16.0.0       py39h8cd3c5a_0        conda-forge
  uritemplate                4.1.1        pyhd8ed1ab_1          conda-forge
  urllib3                    1.26.19      pyhd8ed1ab_0          conda-forge
  veracitools                0.1.3        py_0                  conda-forge
  wcwidth                    0.2.13       pyhd8ed1ab_1          conda-forge
  wheel                      0.45.1       pyhd8ed1ab_1          conda-forge
  wrapt                      1.17.2       py39h8cd3c5a_0        conda-forge
  xorg-libxau                1.0.12       hb9d3cd8_0            conda-forge
  xorg-libxdmcp              1.1.5        hb9d3cd8_0            conda-forge
  yaml                       0.2.5        h7f98852_2            conda-forge
  yarl                       1.18.3       py39h9399b63_1        conda-forge
  yte                        1.7.0        pyha770c72_1          conda-forge
  zipp                       3.21.0       pyhd8ed1ab_1          conda-forge
  zstd                       1.5.7        hb8e6e7a_2            conda-forge
```
</details>


Basic information on how to use this tool:
- executable: `pling`
- help: `-h`, `--help`
- version: `--version`
- description: 
>Pling is a software workflow for plasmid analysis using rearrangement distances, specifically the Double Cut and Join Indel (DCJ-Indel) distance. By intelligently combining containment distance (shared content as fraction of the smaller) and DCJ-indel distance (“how far apart evolutionarily” in a structural sense), and by preventing shared mobile elements from clouding the issue, it infers clusters of related plasmids.

Additional information:

Frolova, D., Lima, L., Roberts, L. W., Bohnenkämper, L., Wittler, R., Stoye, J., & Iqbal, Z. (2024). Applying rearrangement distances to enable plasmid epidemiology with pling. Microbial Genomics, 10(10). https://doi.org/10.1099/mgen.0.001300
‌

Full documentation: https://pling.readthedocs.io/latest/

## Example Usage

```bash
# input is a text file of a list of paths to fasta files
pling input.txt output_dir align
```
